# agent-bridge

./: .gitignore  CHANGELOG.md  DIRECTORY-MAP.md  README.md  moving-home
.github/: pages.yml.pending-workflow-pat
.kiro/: .cli_bash_history
agent-bus/: .bus-check-log  README.md  feed.md
artifacts/: README.md  SITEMAP.md  (+4 more)
data/: README.md  (+33 more)
tools/attention-tracker/: attention-tracker.service  install.sh  pyproject.toml
tools/attention-tracker/attention_tracker/: __init__.py  __main__.py  browser_monitor.py  classifier.py  cli.py  daemon.py  database.py  default_rules.toml  event_processor.py  event_store.py  idle_detector.py  models.py  rules_loader.py  session_tracker.py  state_machine.py  summary.py  window_monitor.py
tools/attention-tracker/tests/: conftest.py  test_action_items_property.py  test_adobe_fetcher.py  test_anomaly_detector.py  test_anomaly_detector_property.py  test_browser_monitor.py  test_budget_pacing.py  test_budget_pacing_property.py  test_classifier.py  test_cli.py  test_data_normalizer_property.py  test_data_store.py  test_data_store_property.py  test_database.py  test_event_processor.py  test_event_store.py  test_google_ads_fetcher.py  test_google_ads_fetcher_property.py  test_idle_detector.py  test_integration.py  test_kpi_comparator.py  test_models_property.py  test_multi_horizon.py  test_multi_horizon_property.py  test_orchestrator_property.py  test_priority_ranker.py  test_priority_ranker_property.py  test_report_generator.py  test_rules_loader.py  test_session_tracker.py  test_state_machine.py  test_summary.py  test_window_monitor.py
(+3142 files in other folders)
